tests/snapshots/parser@loop_with_expr.nolana.snap
---
source: tests/integration.rs
input_file: tests/parser/loop_with_expr.nolana
---
ParseResult {
    program: Program {
        span: Span {
            start: 0,
            end: 0,
        },
        source: "1 + loop(10, {0;})\n",
        body: Empty,
    },
    errors: [
        Diagnostic {
            inner: DiagnosticInner {
                message: "`loop` statement cannot be used inside expressions",
                labels: Some(
                    [
                        LabeledSpan {
                            label: None,
                            span: SourceSpan {
                                offset: SourceOffset(
                                    4,
                                ),
                                length: 1,
                            },
                            primary: false,
                        },
                    ],
                ),
                help: Some(
                    "try defining it in a statement",
                ),
                severity: Error,
            },
        },
    ],
}
