tests/snapshots/parser@missing_semi_with_assignment.nolana.snap
---
source: tests/integration.rs
input_file: tests/parser/missing_semi_with_assignment.nolana
---
ParseResult {
    program: Program {
        span: Span {
            start: 0,
            end: 12,
        },
        source: "v.a = 0; v.a\n",
        body: Complex(
            [
                Assignment(
                    AssignmentStatement {
                        span: Span {
                            start: 0,
                            end: 7,
                        },
                        left: VariableExpression {
                            span: Span {
                                start: 0,
                                end: 3,
                            },
                            scope: Variable,
                            member: Property {
                                property: Identifier {
                                    span: Span {
                                        start: 2,
                                        end: 3,
                                    },
                                    name: "a",
                                },
                            },
                        },
                        operator: Assign,
                        right: NumericLiteral(
                            NumericLiteral {
                                span: Span {
                                    start: 6,
                                    end: 7,
                                },
                                value: 0.0,
                                raw: "0",
                            },
                        ),
                    },
                ),
                Expression(
                    Variable(
                        VariableExpression {
                            span: Span {
                                start: 9,
                                end: 12,
                            },
                            scope: Variable,
                            member: Property {
                                property: Identifier {
                                    span: Span {
                                        start: 11,
                                        end: 12,
                                    },
                                    name: "a",
                                },
                            },
                        },
                    ),
                ),
            ],
        ),
    },
    errors: [
        Diagnostic {
            inner: DiagnosticInner {
                message: "semicolons are required for complex programs (containing `=` or `;`)",
                labels: Some(
                    [
                        LabeledSpan {
                            label: None,
                            span: SourceSpan {
                                offset: SourceOffset(
                                    13,
                                ),
                                length: 0,
                            },
                            primary: false,
                        },
                    ],
                ),
                help: Some(
                    "try inserting a semicolon here",
                ),
                severity: Error,
            },
        },
    ],
}
