tests/snapshots/parser@missing_semi_with_semi.nolana.snap
---
source: tests/integration.rs
input_file: tests/parser/missing_semi_with_semi.nolana
---
ParseResult {
    program: Program {
        span: Span {
            start: 0,
            end: 4,
        },
        source: "0; 0\n",
        body: Complex(
            [
                Expression(
                    NumericLiteral(
                        NumericLiteral {
                            span: Span {
                                start: 0,
                                end: 1,
                            },
                            value: 0.0,
                            raw: "0",
                        },
                    ),
                ),
                Expression(
                    NumericLiteral(
                        NumericLiteral {
                            span: Span {
                                start: 3,
                                end: 4,
                            },
                            value: 0.0,
                            raw: "0",
                        },
                    ),
                ),
            ],
        ),
    },
    errors: [
        Diagnostic {
            inner: DiagnosticInner {
                message: "Semicolons are required for complex Molang expressions (contain `=` or `;`)",
                labels: Some(
                    [
                        LabeledSpan {
                            label: None,
                            span: SourceSpan {
                                offset: SourceOffset(
                                    5,
                                ),
                                length: 0,
                            },
                            primary: false,
                        },
                    ],
                ),
                help: Some(
                    "Try inserting a semicolon here",
                ),
                severity: Error,
            },
        },
    ],
}
