tests/snapshots/parser@non_string_literal_function_params.nolana.snap
---
source: tests/integration.rs
input_file: tests/parser/non_string_literal_function_params.nolana
---
ParseResult {
    program: Program {
        span: Span {
            start: 0,
            end: 0,
        },
        source: "v.good = function('a', v.a + 1);\n\nv.bad = function(1, 2);\n",
        body: Empty,
    },
    errors: [
        Diagnostic {
            inner: DiagnosticInner {
                message: "function parameters must be string literals",
                labels: Some(
                    [
                        LabeledSpan {
                            label: None,
                            span: SourceSpan {
                                offset: SourceOffset(
                                    51,
                                ),
                                length: 1,
                            },
                            primary: false,
                        },
                    ],
                ),
                help: None,
                severity: Error,
            },
        },
    ],
}
