tests/snapshots/parser@parenthesized_complex.nolana.snap
---
source: tests/integration.rs
input_file: tests/parser/parenthesized_complex.nolana
---
ParseResult {
    program: Program {
        span: Span {
            start: 0,
            end: 20,
        },
        source: "(v.a = 1; v.b = 2;);\n",
        body: Complex(
            [
                Expression(
                    Parenthesized(
                        ParenthesizedExpression {
                            span: Span {
                                start: 0,
                                end: 19,
                            },
                            body: Multiple(
                                [
                                    Assignment(
                                        AssignmentStatement {
                                            span: Span {
                                                start: 1,
                                                end: 8,
                                            },
                                            left: VariableExpression {
                                                span: Span {
                                                    start: 1,
                                                    end: 4,
                                                },
                                                scope: Variable,
                                                member: Property {
                                                    property: Identifier {
                                                        span: Span {
                                                            start: 3,
                                                            end: 4,
                                                        },
                                                        name: "a",
                                                    },
                                                },
                                            },
                                            operator: Assign,
                                            right: NumericLiteral(
                                                NumericLiteral {
                                                    span: Span {
                                                        start: 7,
                                                        end: 8,
                                                    },
                                                    value: 1.0,
                                                    raw: "1",
                                                },
                                            ),
                                        },
                                    ),
                                    Assignment(
                                        AssignmentStatement {
                                            span: Span {
                                                start: 10,
                                                end: 17,
                                            },
                                            left: VariableExpression {
                                                span: Span {
                                                    start: 10,
                                                    end: 13,
                                                },
                                                scope: Variable,
                                                member: Property {
                                                    property: Identifier {
                                                        span: Span {
                                                            start: 12,
                                                            end: 13,
                                                        },
                                                        name: "b",
                                                    },
                                                },
                                            },
                                            operator: Assign,
                                            right: NumericLiteral(
                                                NumericLiteral {
                                                    span: Span {
                                                        start: 16,
                                                        end: 17,
                                                    },
                                                    value: 2.0,
                                                    raw: "2",
                                                },
                                            ),
                                        },
                                    ),
                                ],
                            ),
                        },
                    ),
                ),
            ],
        ),
    },
    errors: [],
}
