tests/snapshots/parser@parenthesized_nested.nolana.snap
---
source: tests/integration.rs
input_file: tests/parser/parenthesized_nested.nolana
---
ParseResult {
    program: Program {
        span: Span {
            start: 0,
            end: 10,
        },
        source: "((((16))))\n",
        body: Simple(
            Parenthesized(
                ParenthesizedExpression {
                    span: Span {
                        start: 0,
                        end: 10,
                    },
                    body: Single(
                        Parenthesized(
                            ParenthesizedExpression {
                                span: Span {
                                    start: 1,
                                    end: 9,
                                },
                                body: Single(
                                    Parenthesized(
                                        ParenthesizedExpression {
                                            span: Span {
                                                start: 2,
                                                end: 8,
                                            },
                                            body: Single(
                                                Parenthesized(
                                                    ParenthesizedExpression {
                                                        span: Span {
                                                            start: 3,
                                                            end: 7,
                                                        },
                                                        body: Single(
                                                            NumericLiteral(
                                                                NumericLiteral {
                                                                    span: Span {
                                                                        start: 4,
                                                                        end: 6,
                                                                    },
                                                                    value: 16.0,
                                                                    raw: "16",
                                                                },
                                                            ),
                                                        ),
                                                    },
                                                ),
                                            ),
                                        },
                                    ),
                                ),
                            },
                        ),
                    ),
                },
            ),
        ),
    },
    errors: [],
}
