tests/snapshots/parser@parenthesized_simple.nolana.snap
---
source: tests/integration.rs
input_file: tests/parser/parenthesized_simple.nolana
---
ParseResult {
    program: Program {
        span: Span {
            start: 0,
            end: 0,
        },
        source: "()\n",
        body: Empty,
    },
    errors: [
        Diagnostic {
            inner: DiagnosticInner {
                message: "Empty parenthesized expression",
                labels: Some(
                    [
                        LabeledSpan {
                            label: None,
                            span: SourceSpan {
                                offset: SourceOffset(
                                    1,
                                ),
                                length: 1,
                            },
                            primary: false,
                        },
                    ],
                ),
                help: None,
                severity: Error,
            },
        },
    ],
    panicked: true,
}
