tests/snapshots/parser@parenthesized_unclosed.nolana.snap
---
source: tests/integration.rs
input_file: tests/parser/parenthesized_unclosed.nolana
---
ParseResult {
    program: Program {
        span: Span {
            start: 0,
            end: 0,
        },
        source: "(1+1\n",
        body: Empty,
    },
    errors: [
        Diagnostic {
            inner: DiagnosticInner {
                message: "Expected `)` but found `EOF`",
                labels: Some(
                    [
                        LabeledSpan {
                            label: Some(
                                "Here",
                            ),
                            span: SourceSpan {
                                offset: SourceOffset(
                                    5,
                                ),
                                length: 0,
                            },
                            primary: false,
                        },
                    ],
                ),
                help: None,
                severity: Error,
            },
        },
    ],
}
