tests/snapshots/parser@string.nolana.snap
---
source: tests/integration.rs
input_file: tests/parser/string.nolana
---
ParseResult {
    program: Program {
        span: Span {
            start: 0,
            end: 19,
        },
        source: "'foo_bar123.-$#*()'\n",
        body: Simple(
            StringLiteral(
                StringLiteral {
                    span: Span {
                        start: 0,
                        end: 19,
                    },
                    value: "foo_bar123.-$#*()",
                },
            ),
        ),
    },
    errors: [],
    panicked: false,
}
